phone-list working

--- a/src/app/phone-detail/phone-detail.component.html
+++ b/src/app/phone-detail/phone-detail.component.html
@@ -1,1 +1,19 @@
-<p>phone-detail works!</p>
+<!-- <main *ngIf="allReady">
+    <article>
+        <figure>
+            <img id="view-img" src="{{ 'assets/img/phones/' + phoneId + '.0.jpg' }}" alt="{{ chosenPhone.name }}">
+        </figure>
+    </article>
+
+    <article>
+        <h1 id="name">{{ chosenPhone.name }}</h1>
+        <hr>
+        <p id="description">{{ chosenPhone.description }}</p>
+        <section *ngFor="let image of chosenPhone.images">
+            <figure>
+                <img (click)="changeImg($event)" src="{{ 'assets/' +image }}" alt="{{ phoneId }}">
+            </figure>
+        </section>
+    </article>
+
+</main> -->
