phone-detail component working

--- a/src/app/phone-detail/phone-detail.component.html
+++ b/src/app/phone-detail/phone-detail.component.html
@@ -1,4 +1,4 @@
-<!-- <main *ngIf="allReady">
+<main *ngIf="allReady">
     <article>
         <figure>
             <img id="view-img" src="{{ 'assets/img/phones/' + phoneId + '.0.jpg' }}" alt="{{ chosenPhone.name }}">
@@ -16,4 +16,4 @@
         </section>
     </article>
 
-</main> -->
+</main>
