--- a/src/app/phone-list/phone-list.component.css
+++ b/src/app/phone-list/phone-list.component.css
@@ -1,23 +1,34 @@
-ul {
-    list-style-type: none;
-}
-
-li {
-    border: 1px solid lightgray;
-    border-radius: 0.5rem;
-    margin: 2rem;
-}
-
 .finder {
     float: left;
     width: 14%;
 }
+
 .products {
     margin-left: 14%;
     width: 70%;
 }
 
-img {
-    width: 10rem;
+li {
+    list-style-type: none;
+    border: 1px solid lightgrey;
+    border-radius: 0.5rem;
+    margin: 1rem;
 }
 
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+.row > * {
+    flex-basis: 0px;
+    margin: 1rem;
+}
+
+.description {
+    flex-grow: 1;
+}
+
+figure img {
+    width: 100px;
+}
