--- a/src/app/phone-list/phone-list.component.html
+++ b/src/app/phone-list/phone-list.component.html
@@ -19,7 +19,7 @@
                     <div class="row">
                         <div>
                             <figure>
-                                <img src="./assets/{{ phone.imageUrl }}" alt="phone image">
+                                <img src="assets/{{ phone.imageUrl }}" alt="phone image">
                             </figure>
                         </div>
                         <div class="description">
